--- a/paper.tex
+++ b/paper.tex
@@ -126,14 +126,15 @@ difficult~\cite{donoho}.  Consequently,  with a limited  training set,
 beyond a certain limit, the classification accuracy actually decreases
 as the number of features increases~\cite{hughes}.  For the purpose of
 classification,  these  problems are  related  to  the \emph{curse  of
-  dimensionality}~\cite{hughes}. This  is a  major drawback  in many  remote sensing
-application since it  is difficult to collect a large  and an accurate
-ground-truth.   An intensive  work has  been performed  in the  remote
-sensing community  to build accurate classifiers  for high dimensional
-images.  Bayesian models~\cite{book:landgrebe}, feature extraction and
-feature   reduction   techniques~\cite{book:landgrebe,DR:guided:tour},
-random   forest~\cite{1396322},  neural   networks~\cite{5411821}  and
-kernel methods~\cite{kernel:methods:rs} have been investigated for the
+  dimensionality}~\cite{donoho}.  This is  a  major  drawback in  many
+remote sensing  application since it  is difficult to collect  a large
+and an accurate ground-truth.  An intensive work has been performed in
+the remote  sensing community to  build accurate classifiers  for high
+dimensional  images.   Bayesian models~\cite{book:landgrebe},  feature
+extraction              and             feature              reduction
+techniques~\cite{book:landgrebe,DR:guided:tour},                random
+forest~\cite{1396322},   neural  networks~\cite{5411821}   and  kernel
+methods~\cite{kernel:methods:rs}  have   been  investigated   for  the
 classification of such images.
 
 The volume of the data is  increasing dramatically with respect to the
